[gd_scene load_steps=2 format=3 uid="uid://d2g2xo1duxtxp"]

[ext_resource type="Script" path="res://Scripts/load_game.gd" id="1_nfwgl"]

[node name="LoadGameMenu" type="Node2D"]
script = ExtResource("1_nfwgl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Save1" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 48.0
offset_top = 64.0
offset_right = 440.0
offset_bottom = 164.0

[node name="CurrentScene" type="Label" parent="ColorRect/Save1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 53.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="Timestamp" type="Label" parent="ColorRect/Save1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="NoSaveFile" type="Label" parent="ColorRect/Save1"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -11.5
offset_right = 47.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No Save File"

[node name="Save2" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 48.0
offset_top = 200.0
offset_right = 440.0
offset_bottom = 300.0

[node name="CurrentScene" type="Label" parent="ColorRect/Save2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 30.0
offset_right = 20.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Timestamp" type="Label" parent="ColorRect/Save2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.5
offset_top = -40.0
offset_right = 63.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="NoSaveFile" type="Label" parent="ColorRect/Save2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -11.5
offset_right = 47.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No Save File"

[connection signal="pressed" from="ColorRect/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="ColorRect/Save2" to="." method="_on_save_2_pressed"]
